--- a/OpenCase/RUS/about.html
+++ b/OpenCase/RUS/about.html
@@ -23,16 +23,23 @@ color: #fff;
 }
 .container {
     margin-top: 50px;
-    background: #6E6E6E;
+    background: #373B41;
     padding: 0 10px 10px 10px;
     border: 1px solid #fff;
-    color: #fff;
+    color: #CACECC;
+    font-family: LatoRegular;
 }
 h3 {
 	text-align:center;
+	font-family: LatoLight;
 }
 a {
     color: #b7deff;
+	text-decoration: none;
+}
+li b {
+    font-weight: normal;
+    color: #deb61d;
 }
 </style>
 <div class="container">
@@ -44,6 +51,10 @@ VLADOS776<br>
 <span id='local-1'>Если Вы обнаружили ошибки, или у Вас есть предложение, напишите на почту.</span><br>
 <span id='local-2'>Если хотите поблагодарить разработчика, можете подарить что-нибудь в стиме :)</span><br>
 <span id='local-3'>Не забудьте поставить оценку в маркете ^_^</span>
+<h3><span id='special-thanks'>Особая благодарность</span></h3>
+<ul>
+<li>Death Reaper</li>
+</ul>
 <h3><span id='copyright'>Авторские права</span></h3>
 <p id='local-4'>Вся информация взята из открытых источников. Если что-либо в приложении нарушает ваши авторские права, свяжитесь со мной.</p>
 </p>
