--- a/OpenCase/RUS/statistic.html
+++ b/OpenCase/RUS/statistic.html
@@ -27,6 +27,9 @@ table {
 td:nth-child(2n) {
     text-align: right;
 }
+td {
+    padding: 1px 5px;
+}
 tr {
     line-height: 1.6em;
 }
@@ -34,7 +37,6 @@ tr:nth-child(2n) {
     background: rgba(255, 255, 255, 0.1);
 }
 .container {
-    padding: 0 5px;
     font-family: LatoRegular;
 }
 </style>
