Revert "OC Update RPS release"
This reverts commit 4ed12a355acfd045836c91efa54f9a68e45a9595.

--- a/OpenCase/RUS/about.html
+++ b/OpenCase/RUS/about.html
@@ -58,6 +58,13 @@ VLADOS776<br>
 <h3><span id='copyright'>Авторские права</span></h3>
 <p id='local-4'>Вся информация взята из открытых источников. Если что-либо в приложении нарушает ваши авторские права, свяжитесь со мной.</p>
 </p>
+<span class='js-secret' style='display: none'><a href='RPS.html'>RPS</a></span>
 </div>
+<script>
+$(function() {
+	if (Player.nickname == 'VLADOS776')
+		$('.js-secret').css('display', 'block');
+});
+</script>
 </body>
 </html>
