--- a/OpenCase/RUS/inventory.html
+++ b/OpenCase/RUS/inventory.html
@@ -228,11 +228,14 @@ $('.button_contract').on('click', function() {
 	var name = getSkinName(weapon.getAttribute('data-name'), "EN");
 	
 	var collection;
-	for (var i = 0; i < cases.length; i++) 
-		for (var z = 0; z < cases[i].weapons.length; z++)
-			if ((cases[i].weapons[z].type == type) && (getSkinName(cases[i].weapons[z].skinName, "EN") == name))
+	for (var i = 0; i < cases.length; i++) {
+		for (var z = 0; z < cases[i].weapons.length; z++) 
+			if ((cases[i].weapons[z].type == type) && (getSkinName(cases[i].weapons[z].skinName, "EN") == name)) {
 				collection = cases[i].weapons;
-	
+				break;
+			}
+		if (typeof collection != 'undefined') break;
+	}
 	if (typeof collection != "undefined") {
 		var nextQuality = qualitySort[qualitySort.indexOf(weapon.getAttribute('data-rarity'))+1];
 		var nextQualityWeapons = [];
