--- a/OpenCase/RUS/rulet.html
+++ b/OpenCase/RUS/rulet.html
@@ -60,5 +60,8 @@
 </div>
 <!-- Скрипт рулетки -->
 <script src="../scripts/rulet.js"></script>
+<script>
+$(function(){newGame();});
+</script>
 </body>
 </html>
