--- a/OpenCase/RUS/RPS.html
+++ b/OpenCase/RUS/RPS.html
@@ -53,7 +53,7 @@
 	</div>
 	
 </div>
-<script src="../scripts/rulet.js"></script>
+<!-- <script src="../scripts/rulet.js"></script> -->
 <script src="../scripts/rps.js"></script>
 </body>
 </html>
