OC уровни сложности в рулетке

--- a/OpenCase/RUS/cases.html
+++ b/OpenCase/RUS/cases.html
@@ -1,11 +1,12 @@
 ﻿<html><head>
 <title>Список кейсов</title>
-<script src="../scripts/cases2.js"></script>
 <script src="../scripts/jquery.min.js"></script>
 <script src="../scripts/jquery.cookie.js"></script>
 <script src="../scripts/jquery-ui.min.js"></script>
-<script src="../scripts/main.js"></script>
+<script src="../scripts/skinNames.js"></script>
 <script src="../scripts/settings.js"></script>
+<script src="../scripts/main.js"></script>
+<script src="../scripts/cases2.js"></script>
 
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
