--- a/OpenCase/RUS/rulet.html
+++ b/OpenCase/RUS/rulet.html
@@ -5,13 +5,13 @@
 <script src="../scripts/jquery.min.js"></script>
 <script src="../scripts/jquery.cookie.js"></script>
 <script src="../scripts/cases2.js"></script>
+<script src="../scripts/settings.js"></script>
+<script src="../scripts/skinNames.js"></script>
 <script src="../scripts/main.js"></script>
 <script src="../scripts/quality.js"></script>
 <script src="../scripts/prices.js"></script>
-<script src="../scripts/skinNames.js"></script>
 <script src="../scripts/progressbar.min.js"></script>
 <script src="../scripts/jackpotBots.js"></script>
-<script src="../scripts/settings.js"></script>
 <script src="../scripts/jquery-ui.min.js"></script>
 
 <script src="../scripts/navigationMenu.js"></script>
@@ -41,7 +41,16 @@
 
 <div class="win"></div>
 <div id="players"></div>
-<button id="addItems">Внести предметы</button>
+<div class='buttons'>
+	<button id="addItems">Внести предметы</button>
+	<select id="diffuculty">
+		<option value="1" data-min="0.1" data-max="5" id='local-dif-easy-peasy'>Очень легко $0.1 - $5</option>
+		<option value="2" data-min="5" data-max="30" id='local-dif-easy'>Легко $5 - $30</option>
+		<option value="3" data-min="30" data-max="80" id='local-dif-normal'>Нормально $30 - $80</option>
+		<option value="4" data-min="80" data-max="200" id='local-dif-hard'>Сложно $80 - $200</option>
+		<option value="5" data-min="200" data-max="5000000" id='local-dif-legendary'>Легендарно $200 - $∞</option>
+	</select>
+</div>
 <table class="items"><tr></tr></table>
 
 <!-- Ориентация экрана -->
