Рулетка переименована в джекпот

--- a/OpenCase/RUS/rulet.html
+++ b/OpenCase/RUS/rulet.html
@@ -1,6 +1,6 @@
 ﻿<html>
 <head>
-<title>Рулетка</title>
+<title>Джекпот</title>
 <!-- Скрипты -->
 <script src="../scripts/jquery.min.js"></script>
 <script src="../scripts/jquery.cookie.js"></script>
@@ -27,7 +27,7 @@
 </head>
 <body data-localization="jackpot">
 <div id="containter">
-<div class="navigationBar" data-menu-EN="Jackpot" data-menu-RU="Рулетка"></div>
+<div class="navigationBar" data-menu-EN="Jackpot" data-menu-RU="Джекпот"></div>
 <div id="circle"></div>
 <div id="status"></div>
 
