--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Game Tutorials</title>
+    <title>Android Apps</title>
   </head>
 
   <body>
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title">Game Tutorials</h1>
+          <h1 id="project_title">Android Apps</h1>
           <h2 id="project_tagline"></h2>
 
         </header>
@@ -25,9 +25,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Apps</h3>
-<ul>
+<ul style="list-style-type: none;">
 <li><a href="GTAVTutorials\map\map.html">GTA V Map (Beta)</a></li>
 <li><a href="PocketMortys/ENG/mortyDeck.html">Pocket Mortys (Morty Deck)</a></li>
 <li><a href="PocketMortys/ENG/Items.html">Pocket Mortys (Items List)</a></li>
