--- a/OpenCase/RUS/rulet.html
+++ b/OpenCase/RUS/rulet.html
@@ -13,6 +13,7 @@
 <script src="../scripts/progressbar.min.js"></script>
 <script src="../scripts/jackpotBots.js"></script>
 <script src="../scripts/jquery-ui.min.js"></script>
+<script src="../scripts/inventory.js"></script>
 
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
@@ -53,16 +54,11 @@
 </div>
 <table class="items"><tr></tr></table>
 
-<!-- Ориентация экрана -->
-<div id="changeOrientation">
-<img src="../images/orientation.png">
-</div>
-
 <!-- Инвентарь -->
 <div class="inventoryList" style="display: none;">
 <span id="intentory-Player"></span>
 <div class="closeInventory"></div>
-<ul class="inventory"></ul>
+<ul class="inventory inv-price-counter"></ul>
 <button class="choseItems">Внести</button>
 </div>
 
