--- a/OpenCase/RUS/coinflip.html
+++ b/OpenCase/RUS/coinflip.html
@@ -47,18 +47,22 @@
 <div class='blur' style='display:none'></div>
 <div class='game' style='display:none'>
 	<div class='close-game'></div>
+	<table class='game__table'>
+	<tr><td class='game__table__td'>
 	<div class='game__bot'>
 		<span class='game__bot__nick'></span>
 		<img src='' class='game__bot__img'>
 		<span class='game__bot__price'></span>
 		<span class='game__bot__chance'>100%</span>
-	</div>
+	</div></td><td class='game__table__win'></td>
+	<td class='game__table__td'>
 	<div class='game__player'>
 		<span class='game__player__nick'>?</span>
 		<img src='../images/ava/0.jpg' class='game__player__img'>
 		<span class='game__player__price'>$0</span>
 		<span class='game__player__chance'>0%</span>
-	</div>
+	</div></td>
+	</tr></table>
 	<div class='game__start' style='display: none'><span class='game__start__button'>Начать игру</span></div>
 	<table class='bot-inventory'>
 	</table>
